--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -4,8 +4,10 @@ body{
     font-family: 'Quicksand', sans-serif;
 }
 
+
+
 .bg-dark{
-    background: #7952b3!important;
+    background: #005475!important;
 }
 
 .breadcrumb {
@@ -14,7 +16,7 @@ body{
     padding: .5rem 1rem;
     margin-bottom: 1rem;
     list-style: none;
-    background-color: #7951b3;
+    background-color: #005475;
     border-radius: 0px!important;
 }
 
@@ -32,3 +34,91 @@ body{
 .breadcrumb-item.active {
     color: white;
 }
+
+.right-line {
+    border-right: 5px #ccc solid;
+    height:2em
+  }
+  
+  .top-line {
+    border-top: 5px #ccc solid;
+  }
+  
+  .halved {
+    width: 50%;
+    float:left;
+  }
+
+
+/* ---- ------------------------------------------------------------------- */
+
+
+/*--------------------------------------------------------------
+# Hero Section
+--------------------------------------------------------------*/
+#hero {
+    width: 100%;
+    background-image: url("../img/hero-bg.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: right top;
+    margin-top: 70px;
+    padding: 60px 0;
+  }
+  
+  #hero h1 {
+    margin: 0 0 20px 0;
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 56px;
+    color: #364146;
+  }
+  
+  #hero h2 {
+    color: #576971;
+    margin-bottom: 30px;
+    font-size: 24px;
+  }
+  
+  #hero .btn-get-started {
+    font-family: "Raleway", sans-serif;
+    font-weight: 600;
+    font-size: 13px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    display: inline-block;
+    padding: 12px 28px;
+    border-radius: 3px;
+    transition: 0.5s;
+    color: #fff;
+    background: #009cea;
+  }
+  
+  #hero .btn-get-started:hover {
+    background: #008bd1;
+  }
+  
+  #hero .hero-img {
+    text-align: center;
+  }
+  
+  #hero .hero-img img {
+    width: 70%;
+  }
+  
+  @media (min-width: 1024px) {
+    #hero {
+      background-attachment: fixed;
+    }
+  }
+  
+  @media (max-width: 992px) {
+    #hero h1 {
+      font-size: 32px;
+      line-height: 40px;
+    }
+    #hero h2 {
+      font-size: 20px;
+    }
+  }
+  
